# Claude-Builder-Club-Hackathon

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
agents/: disclosure_agent.py  sis_agent.py
core/: config.py  models.py  prompts.py  scoring.py
dashboard/: package-lock.json
dashboard/src/: App.tsx  types.ts  utils.ts
dashboard/src/components/: Header.tsx  PipelineBar.tsx  ReportPanel.tsx  RiskMatrixPanel.tsx  StatsGrid.tsx  TabNav.tsx  TargetModal.tsx  TargetsPanel.tsx  VulnerabilitiesPanel.tsx
data/: targets.json
findings/: childrens_health_fund.json  refugee_aid_intl.json  safe_harbor_dv.json  vibe-check-report-childbridge-intl-org.md  vibe-check-report-ecorestorefd-org.md  vibe-check-report-globalwaterinitiative-org.md  vibe-check-report-oceanguardalliance-org.md  vibe-check-report-refugeeaidnetwork-org.md
output/: fix-artifact.patch  vibe-check-report.md
services/: claude_service.py  io_service.py  web_service.py
src/: index.js  server.js
src/agents/: scanner.js
src/dashboard/public/: app.js  index.html  styles.css
src/report/: generator.js
src/scan/: detector.js  severity.js
src/search/: discovery.js  fingerprint.js
