[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ngo-disclosure-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
]

[project.scripts]
sis-agent = "agents.sis_agent:main"
disclosure-agent = "agents.disclosure_agent:main"

[tool.setuptools.packages.find]
where = ["."]
